CHANGES
*******

0.12 (unreleased)
=================

- Fixed a typo in the `defer_link` documentation.

- Morepath's link generation wasn't properly quoting paths and
  parameters in all circumstances where non-ascii characters or
  URL-quoted characters were used. See issue #337.

- Morepath could not handle varargs or keyword arguments properly
  in path functions. Now bails out with an error early during
  configuration time. To fix existing code, get rid of any ``*args`` or
  ``**kw``.

- Morepath could not properly generate links if a path directive
  defines a path variable for the path but does not actually use it in
  the path function. Now we complain during configuration time. To fix
  existing code, add all variables that are defined in the path
  (i.e. ``{id}``) to the function signature.

- Certain errors (``ConfigError``) were not reporting directive line number
  information. They now do.

- Better ``ConfligError`` reporting when ``setting_section`` is in use.

- Removed the unused ``request`` parameter from the ``link`` method in
  ``morepath.request``. See issue #351.

0.11.1 (2015-06-29)
===================

- setuptools has the nasty habit to change underscores in project
  names to minus characters. This broke the new autoscan machinery for
  packages with an underscore in their name (such as
  `morepath_sqlalchemy`). This was fixed.

0.11 (2015-06-29)
=================

- **Breaking change**. The ``morepath.autoconfig`` and ``morepath.autosetup``
  methods had to be rewritten. Before, Morepath was unable to autoload packages
  installed using ``pip``.

  As a result, Morepath won't be able to autoload packages if the setup.py
  name differs from the name of the distributed package or module.

  For example: A package named ``my-app`` containing a module named ``myapp``
  won't be automatically loaded anymore.

  Packages like this need to be loaded manually now::

    import morepath
    import myapp

    config = morepath.setup()